; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-math/src/extr_math.c_math_ldexp.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-math/src/extr_math.c_math_ldexp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"fi\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @math_ldexp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @math_ldexp(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @mrb_get_args(i32* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32* %5, i64* %6)
  %9 = load i32, i32* %5, align 4
  %10 = load i64, i64* %6, align 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @ldexp(i32 %9, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @mrb_float_value(i32* %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @mrb_get_args(i32*, i8*, i32*, i64*) #1

declare dso_local i32 @ldexp(i32, i32) #1

declare dso_local i32 @mrb_float_value(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
